--- a/Todo.html
+++ b/Todo.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <h1>Todo Kisr</h1>
+    <h1>Todo</h1>
     <li>"new"- Add A Todos</li>
     <li>"list" - List all Todos</li>
+    <li>"delete" - Remove specific delete</li>
     <li>"quit"- Quit</li>
 </body>
 
