--- a/rgbgame.html
+++ b/rgbgame.html
@@ -10,6 +10,10 @@
 
 <body>
     <h1>The <span id="colorDisplay">RBG</span> Color Game Yo!</h1>
+    <div>
+        <span id="message"></span>
+    </div>
+
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
